app/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: http-https-echo
  name: http-https-echo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: http-https-echo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: http-https-echo
    spec:
      containers:
      - image: mendhak/http-https-echo:latest
        name: http-https-echo
        resources: {}
status: {}
