app/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-https-echo-svc
  name: http-https-echo-svc
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: http-https-echo
